# spark-auto-round

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  OPTIMIZATION.md  README.md  TODO_FIXME.md  docker-compose.yml  pyproject.toml  run-e2e-test.sh  setup.py  user-e2e-test.sh
auto_round/: __init__.py  __main__.py  autoround.py  calib_dataset.py  cli_display.py  envs.py  formats.py  metrics.py  report.py  schemes.py  special_model_handler.py  version.py  wrapper.py
auto_round/algorithms/quantization/: __init__.py  base.py  config.py
auto_round/asqa/: __init__.py  __main__.py  substitute.py
auto_round/calibration/: diffusion.py  hooks.py  inputs.py  llm.py  utils.py
auto_round/compressors/: __init__.py  auto_tune.py  base.py  config.py  data_driven.py  entry.py  memory_estimator.py  shard_writer.py  utils.py  zero_shot.py
auto_round/context/: compress.py  model.py
auto_round/data_type/: __init__.py  int.py  utils.py
auto_round/export/: utils.py
auto_round/utils/: __init__.py  common.py  device.py  model.py  offload.py  resume.py  weight_handler.py
auto_round/utils/model/: load.py  (+2 more)
docs/: optimization.md  quantization-report.txt  test-score.md
scripts/: README.md  compare_quantized_models.py  fix-v14.1-layer-prefix.py  verify-qwen3_5-fix.py
spark-vllm-docker/: run-local-recipe.sh  run-local-test.sh  run-test.sh
spark-vllm-docker/recipes/: local-qwen3.5-0.8b-ar.yaml  local-qwen3.5-0.8b-git.yaml  local-qwen3.5-0.8b-oc.yaml  local-qwen3.5-0.8b-pile.yaml
test/: conftest.py  envs.py  fixtures.py  helpers.py  test_cli_display.py  test_cli_integration.py  test_dry_run_unit.py  test_dual_emit.py  test_metrics.py  test_quality_summary.py  test_qwen3_5_regression.py  test_report.py  test_resume.py  test_shakedown_unit.py
test/test_asqa/: test_substitute.py
test/test_cuda/: test_asqa_e2e.py  test_asqa_integration.py  test_auto_tune.py  test_auto_tune_e2e.py  test_cli_integration_full.py  test_dry_run.py  test_memory_estimator.py  test_memory_strategy.py  test_meta_device.py  test_offloader_modes.py  test_qwen3_5_export.py
(+16 files in other folders)
