[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-auto-round"
dynamic = ["version"]
description = "W4A16 quantization for DGX Spark GB10"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "triton>=3.0",
    "transformers>=4.40",
    "accelerate",
    "datasets",
    "numpy",
    "tqdm",
    "packaging",
    "psutil",
    "py-cpuinfo",
    "safetensors",
    "huggingface_hub",
    "pydantic",
    "flash-linear-attention>=0.3.0",
    "causal-conv1d>=1.4.0",
    "pandas",
    "requests",
    "pillow",
]

[project.optional-dependencies]
test = [
    "pytest",
    "gptqmodel",
    "lm_eval",
]

[project.scripts]
spark-auto-round = "auto_round.__main__:run"
spark-asqa-substitute = "auto_round.asqa.__main__:run"

[tool.setuptools.dynamic]
version = {attr = "auto_round.version.__version__"}

[tool.pytest.ini_options]
markers = [
    "skip_ci: mark test as skipped in CI (not necessary since covered by backend tests)",
]
